--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0), #000),url(img/jungleroots.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.41), rgb(0, 0, 0)),url(img/jungleroots.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -27,6 +27,11 @@ header{
 
 h1{
     margin: 0;
+    font-weight: 200;
+    font-size: 270%;
+    letter-spacing: 1px;
+    word-spacing: 3px;
+    margin-bottom: 14px;
 }
 
 .hero-text-box{
@@ -35,4 +40,60 @@ h1{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.btn:link,
+.btn:visited{
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
+    margin-right: 15px;
+    
+    
+}
+
+.btn:hover,
+.btn:active{
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 200px;
+    
+}
+
+c89a0a
+
+.btn-full:link,
+.btn-full:visited{
+    background-color: #E8B30C;
+    border: 1px solid #E8B30C;
+    color: #fff;
+
+}
+
+.btn-full:hover,
+.btn-full:active{
+    background-color: #c89a0a;
+    border: 1px solid #c89a0a;
+    color: #fff;
+
+}
+
+.btn-ghost:link,
+.btn-ghost:active{
+    border: 1px solid #E8B30C;
+    color: #E8B30C;
+
+}
+
+.btn-ghost:hover,
+.btn-ghost:active{
+    background-color: #c89a0a;
+    border: 1px solid #c89a0a;
+    color: #fff;
+    
 }
