--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -97,3 +97,33 @@ c89a0a
     color: #fff;
     
 }
+
+.main-nav{
+    float: right;
+    list-style: none;
+    margin-top: 25px;
+}
+
+.main-nav li{
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited{
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.41);
+    padding: 0 5px 5px 5px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    letter-spacing: 1px;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active{
+    color: #E8B30C;
+    border-bottom: 2px solid #E8B30C;
+    
+}
