queries and button functionality

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -243,7 +243,7 @@ a:hover{
 }
 
 footer{
-    padding: 40px 0;
+    padding: 0;
     background-color: #426C3B;
     color: #fff;
     text-decoration: none;
